--- a/quarto/references.bib
+++ b/quarto/references.bib
@@ -39,9 +39,64 @@
   note = {https://www.csids.no/sc9/, https://github.com/csids/sc9},
 }
 
+@Manual{csalert,
+  title = {csalert: Alerts from Public Health Surveillance Data},
+  author = {Beatriz Valcarcel Salamanca and Chi Zhang and Richard Aubrey White},
+  year = {2023},
+  note = {https://www.csids.no/csalert/, https://github.com/csids/csalert},
+}
+
 @Manual{icpc2covid,
 title={Endringsdokument for norsk utgave av ICPC-2 gjeldende fra 1/1-2020 til 31/12-2020}, 
 author = {{Direktoratet for e-helse}},
 year={2021},
 month={Feb}
 } 
+
+@article{datesdelta,
+title = {No difference in risk of hospitalization between reported cases of the SARS-CoV-2 Delta variant and Alpha variant in Norway},
+journal = {International Journal of Infectious Diseases},
+volume = {115},
+pages = {178-184},
+year = {2022},
+issn = {1201-9712},
+doi = {https://doi.org/10.1016/j.ijid.2021.12.321},
+url = {https://www.sciencedirect.com/science/article/pii/S1201971221012182},
+author = {Lamprini Veneti and Beatriz {Valcarcel Salamanca} and Elina Seppälä and Jostein Starrfelt and Margrethe Larsdatter Storm and Karoline Bragstad and Olav Hungnes and Håkon Bøås and Reidar Kvåle and Line Vold and Karin Nygård and Eirik Alnes Buanes and Robert Whittaker},
+keywords = {Norway, SARS-CoV-2, Hospitalization, Variants of concern, Delta, Alpha},
+abstract = {ABSTRACT
+Objectives
+To estimate the risk of hospitalization among reported cases of the Delta variant of severe acute respiratory syndrome coronavirus-2 (SARS-CoV-2) compared with the Alpha variant in Norway, and the risk of hospitalization by vaccination status.
+Methods
+A cohort study was conducted on laboratory-confirmed cases of SARS-CoV-2 in Norway, diagnosed between 3 May and 15 August 2021. Adjusted risk ratios (aRR) with 95% confidence intervals (CI) were calculated using multi-variable log-binomial regression, accounting for variant, vaccination status, demographic characteristics, week of sampling and underlying comorbidities.
+Results
+In total, 7977 cases of the Delta variant and 12,078 cases of the Alpha variant were included in this study. Overall, 347 (1.7%) cases were hospitalized. The aRR of hospitalization for the Delta variant compared with the Alpha variant was 0.97 (95% CI 0.76–1.23). Partially vaccinated cases had a 72% reduced risk of hospitalization (95% CI 59–82%), and fully vaccinated cases had a 76% reduced risk of hospitalization (95% CI 61–85%) compared with unvaccinated cases.
+Conclusions
+No difference was found between the risk of hospitalization for Delta cases and Alpha cases in Norway. The results of this study support the notion that partially and fully vaccinated cases are highly protected against hospitalization with coronavirus disease 2019.}
+}
+
+@Manual{datesomicron,
+title={Weekly Report — Week 52}, 
+author = {{Norwegian Institute of Public Health}},
+year={2022},
+month={Jan},
+url = {https://www.fhi.no/contentassets/8a971e7b0a3c4a06bdbf381ab52e6157/vedlegg/3.-alle-ukerapporter-2021/ukerapport-uke-52-27.12.21---02.01.22.pdf},
+pages = {34},
+} 
+
+@Manual{datesomicron,
+title={Weekly Report — Week 52}, 
+author = {{Norwegian Institute of Public Health}},
+year={2022},
+month={Jan},
+url = {https://www.fhi.no/contentassets/8a971e7b0a3c4a06bdbf381ab52e6157/vedlegg/3.-alle-ukerapporter-2021/ukerapport-uke-52-27.12.21---02.01.22.pdf},
+pages = {34},
+} 
+
+@online{datesnocontrol, 
+    author = {{Norwegian Government}},
+    title = {Timeline: The authorities' handling of the coronavirus situation.},
+    year = 2023,
+    url = {https://www.regjeringen.no/no/tema/Koronasituasjonen/tidslinje-koronaviruset/id2692402/},
+    urldate = {2023-06-15}
+}
